# bore

./: .gitignore  AGENTS.md  Cargo.toml  DESIGN.md  PRODUCT.md  README.en.md  README.md  WEB_GUI_USAGE.md  package.json  test_fixed_port.sh  test_port_display.sh  test_web_gui.sh
.github/workflows/: docker.yml  mean_bean_deploy.yml
.impeccable/: design.json
npm/bore/: README.md  package.json
npm/bore-darwin-arm64/: package.json
npm/bore-darwin-x64/: package.json
npm/bore-linux-arm-gnueabi/: package.json
npm/bore-linux-arm-musleabi/: package.json
npm/bore-linux-arm64-musl/: package.json
npm/bore-linux-armv7-gnueabihf/: package.json
npm/bore-linux-armv7-musleabihf/: package.json
npm/bore-linux-ia32-musl/: package.json
npm/bore-linux-x64-musl/: package.json
npm/bore-win32-ia32-msvc/: package.json
npm/bore-win32-x64-msvc/: package.json
npm/scripts/: check-release.mjs  pack-dry-run.mjs  prepare-platform-packages-from-assets.mjs  prepare-platform-packages.mjs
src/: auth.rs  cli.rs  client.rs  lib.rs  main.rs  web_gui.rs
src/web/: api.rs  mod.rs  state.rs  tunnel.rs
src/web/static/: app.js  index.html  style.css
tests/: e2e_test.rs  web_test.rs
web_gui/static/: index.html
