[package]
name = "bore-cli"
version = "0.6.0"
license = "MIT"
description = "A modern, simple TCP tunnel in Rust that exposes local ports to a remote server, bypassing standard NAT connection firewalls."
repository = "https://github.com/fishandsheep/bore"
documentation = "https://docs.rs/bore-cli"
keywords = ["network", "cli", "tunnel", "tcp"]
categories = ["network-programming", "web-programming", "command-line-utilities"]
readme = "README.md"
edition = "2021"
rust-version = "1.85"

[[bin]]
name = "bore"
path = "src/main.rs"

[dependencies]
anyhow = { version = "1.0.102", features = ["backtrace"] }
clap = { version = "4.6.1", features = ["derive", "env"] }
dashmap = "6.2.1"
fastrand = "2.4.1"
futures-util = { version = "0.3.32", features = ["sink"] }
hex = "0.4.3"
hmac = "0.13.0"
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.150"
sha2 = "0.11.0"
tokio = { version = "1.52.3", features = ["rt-multi-thread", "io-util", "macros", "net", "time"] }
tokio-util = { version = "0.7.18", features = ["codec"] }
tracing = "0.1.44"
tracing-subscriber = "0.3.23"
uuid = { version = "1.23.4", features = ["serde", "v4"] }

[dev-dependencies]
rstest = "0.26.1"
tokio = { version = "1.52.3", features = ["sync"] }
